--- a/app/templates/user/table.twig
+++ b/app/templates/user/table.twig
@@ -12,9 +12,9 @@
 		<div class="container">
 			<ul class="list-group">
 				{% for user in users %}
-					<li class="list-group-item">
-						{% include "functions/user.twig" %}
-					</li>
+					<a href="{{base}}/users/{{user.name}}" class="list-group-item">
+						{% include "functions/user.twig" with {'user' : user, 'nolink' : true} %}
+					</a>
 				{% endfor %}
 			</ul>
 		</div>
