--- a/app/templates/functions/user.twig
+++ b/app/templates/functions/user.twig
@@ -1,7 +1,7 @@
 {% if user.name %}
-<a href="{{base}}/users/{{user.name}}"><strong>{{user.name}}</strong></a>
-{% if user.administrator %}<span class="label label-success">{% trans %}Administrator{% endtrans %}</span>
-{% elseif user.moderator %}<span class="label label-primary">{% trans %}Moderator{% endtrans %}</span>{% endif %}
+{% if not nolink %}<a href="{{base}}/users/{{user.name}}">{% endif %}<strong>{{user.name}}</strong>{% if not nolink %}</a>{% endif %}
+{% if user.administrator %} <span class="label label-success">{% trans %}Administrator{% endtrans %}</span>
+{% elseif user.moderator %} <span class="label label-primary">{% trans %}Moderator{% endtrans %}</span>{% endif %}
 {% else %}
 {% trans %}Somebody{% endtrans %}
 {% endif %}
