--- a/app/templates/user/profile.twig
+++ b/app/templates/user/profile.twig
@@ -24,18 +24,21 @@
 					{% if registration %}
 						<li class="list-group-item" title="{% trans %}Welcome to Lorry!{% endtrans %}"><span class="glyphicon glyphicon-user"></span> {% trans %}Registered on {{registration}}{% endtrans %}</li>
 						{% endif %}
-						{% if username == "B_E" %}
+						{% if flags.founder %}
 						<li class="list-group-item" title="{% trans %}Well that took a bit longer than expected{% endtrans %}"><span class="glyphicon glyphicon-fire"></span> <a href="{{base}}/about#about" class="text">{% trans %}Founder of Lorry{% endtrans %}</a></li>
-						{% elseif user_alpha %}
+						{% elseif flags.alpha %}
 						<li class="list-group-item" title="{% trans %}Registered on the alpha site{% endtrans %}"><span class="glyphicon glyphicon-heart"></span> {% trans %}Took part in Lorry Alpha{% endtrans %}</li>
-						{% elseif user_beta %}
+						{% elseif flags.beta %}
 						<li class="list-group-item" title="{% trans %}Registered on the beta site{% endtrans %}"><span class="glyphicon glyphicon-heart-empty"></span> {% trans %}Took part in Lorry Beta{% endtrans %}</li>
 						{% endif %}
-						{% if username == "Nachtfalter" or username == "Luchs" or username == "Nachtschatten" or username == "Tyron" %}
-						<li class="list-group-item" title="{% trans %}Built something awesome for the community{% endtrans %}"><span class="glyphicon glyphicon-globe"></span> {% trans %}Valuable community member{% endtrans %}</li>
+						{% if flags.vip %}
+						<li class="list-group-item" title="{% trans %}Built something awesome for the Clonk community{% endtrans %}"><span class="glyphicon glyphicon-globe"></span> {% trans %}Valuable community member{% endtrans %}</li>
 						{% endif %}
-						{% if username == "Butterbrot" %}
+						{% if flags.coder %}
 						<li class="list-group-item" title="{% trans %}Knows Google-fu{% endtrans %}"><span class="glyphicon glyphicon-cog"></span> {% trans %}Lorry hacker{% endtrans %}</li>
+						{% endif %}
+						{% if flags.reporter %}
+						<li class="list-group-item" title="{% trans %}&quot;Hey, what's that button do?&quot;{% endtrans %}"><span class="glyphicon glyphicon-flag"></span> {% trans %}Reported a bug in Lorry{% endtrans %}</li>
 						{% endif %}
 				</ul>
 				{% if clonkforge or github %}
