remove outdated link to Clonk forum (credit: Adler)

--- a/app/templates/site/about.twig
+++ b/app/templates/site/about.twig
@@ -70,7 +70,7 @@
 					<dt><a href="https://twitter.github.io/typeahead.js/">Typeahead.js</a></dt>
 					<dd>by <a href="https://twitter.com/">Twitter</a>,</dd>
 					<dt><a href="http://www.clonk.de/cr.php?lng={% trans "en" %}">Clonk Rage logo</a></dt>
-					<dd>with <a href="http://www.clonk.de/forum/en/topic_show.pl?pid=11760#pid11760">friendly permission</a> from <a href="http://www.clonk.de/redwolf.php?lng={% trans "en" %}">RedWolfDesign</a>,</dd>
+					<dd>with friendly permission from <a href="http://www.clonk.de/redwolf.php?lng={% trans "en" %}">RedWolfDesign</a>,</dd>
 					<dt><a href="http://git.openclonk.org/openclonk-resources.git/blob/HEAD:/graphics/OpenClonkLogo.xcf">OpenClonk logo</a></dt>
 					<dd>by "<a href="http://forum.openclonk.org/user_info.pl?uid=37">MrBeast</a>" at <a href="http://openclonk.org/">openclonk.org</a>,</dd>
 					<dt><a href="http://subtlepatterns.com/debut-light/">Debut Light</a>  <span class="text-muted">(background texture)</span></dt>
