--- a/app/templates/publish/release.twig
+++ b/app/templates/publish/release.twig
@@ -4,7 +4,7 @@
 
 {% block content %}
 	<div class="page-header">
-		<div class="breakout"><a href="{{base}}/publish/{{addonid}}#releases"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span></a></div>
+		<div class="breakout"><a href="{{base}}/publish"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span></a></div>
 		<div class="container">
 			<h1>
 				<a href="{{base}}/publish/{{addon.id}}#releases">
