update "published" label for releases

--- a/app/templates/functions/labels/published.twig
+++ b/app/templates/functions/labels/published.twig
@@ -1,4 +1,4 @@
 {% extends 'functions/labels/label.twig' %}
 
-{% block class %}label-default{% endblock %}
-{% block title %}{% trans %}Outdated{% endtrans %}{% endblock %}
+{% block class %}label-half-success{% endblock %}
+{% block title %}{% trans %}Published{% endtrans %}{% endblock %}
