update developer pages

--- a/app/templates/site/api.twig
+++ b/app/templates/site/api.twig
@@ -1,11 +1,11 @@
 {% extends 'root.twig' %}
 
-{% set title %}{% trans %}{{brand}} API reference{% endtrans %}{% endset %}
+{% set title %}{% trans %}API portal{% endtrans %}{% endset %}
 
 {% block content %}
 	<div class="page-header">
 		<div class="container">
-			<h1>{% trans %}API reference{% endtrans %}</h1>
+			<h1>{{title}}</h1>
 		</div>
 	</div>
 	<div class="container">
