--- a/app/templates/publish/developers.twig
+++ b/app/templates/publish/developers.twig
@@ -12,7 +12,6 @@
 		<div class="row">
 			<div class="col-md-5">
 				{% if user_login %}
-					<h2>{% trans %}New addon{% endtrans %}</h2>
 					<form role=form" method="post" action="{{filename}}">
 						<input type="hidden" name="state" value="{{state}}">
 						{% include 'functions/alert.twig' with {'selector' : 'creation'} %}
@@ -49,9 +48,10 @@
 				<h2>{% trans %}You have an awesome idea?{% endtrans %}</h2>
 				<p class="lead">{% trans %}Whether it's magic caves or exploding Wipfs, {{brand}} is the place to publish your addons.{% endtrans %}</p>
 				<p>
-					<a href="https://clonkspot.org/development" class="btn btn-lg btn-primary" target="_blank">{% trans %}Clonk Rage documentation{% endtrans %}</a>
+					<a href="http://crdocs.clonkspot.org/de/sdk/" class="btn btn-lg btn-primary" target="_blank">{% trans %}Clonk Rage documentation{% endtrans %}</a>
 					<a href="http://wiki.openclonk.org/w/Development" class="btn btn-lg btn-primary" target="_blank">{% trans %}OpenClonk documentation{% endtrans %}</a>
 				</p>
+				<p class="help-block">{% trans %}Please don't <em>actually</em> blast Wipfs into oblivion.{% endtrans %}</p>
 				<hr>
 				{% endif %}
 				<div class="row">
@@ -61,9 +61,9 @@
 						<p><a href="https://clonkspot.org/development" class="btn btn-info" target="_blank">{% trans %}Introduction on ClonkSpot{% endtrans %}</a></p>
 					</div>
 					<div class="col-md-6">
-						<h3>{% trans %}Use {{brand}} for your project{% endtrans %}</h3>
+						<h3>{% trans %}Integrating {{brand}}{% endtrans %}</h3>
 						<p>{% trans %}Would you like to integrate {{brand}} into your project? The Lorry platform offers an API for you to request information about addons and releases.{% endtrans %}</p>
-						<p><a href="{{base}}/about/api" class="btn btn-default">{% trans %}API reference{% endtrans %}</a></p>
+						<p><a href="{{base}}/about/api" class="btn btn-default">{% trans %}API portal{% endtrans %}</a></p>
 					</div>
 				</div>
 			</div>
