--- a/app/templates/publish/portal.twig
+++ b/app/templates/publish/portal.twig
@@ -5,11 +5,7 @@
 {% block content %}
 	<div class="page-header">
 		<div class="container">
-			<h1>{{title}}
-				<small>
-					<a href="{{base}}/developers?create"><span class="glyphicon glyphicon-plus"></span></a>
-				</small>
-			</h1>
+			<h1>{{title}} <small><a href="{{base}}/developers?create"><span class="glyphicon glyphicon-plus"></span></a></small></h1>
 		</div>
 	</div>
 	{% if addons %}	
