--- a/app/templates/user/profile.twig
+++ b/app/templates/user/profile.twig
@@ -25,7 +25,7 @@
 						<li class="list-group-item" title="{% trans %}Welcome to Lorry!{% endtrans %}"><span class="glyphicon glyphicon-user"></span> {% trans %}Registered on {{registration}}{% endtrans %}</li>
 						{% endif %}
 						{% if flags.founder %}
-						<li class="list-group-item" title="{% trans %}Well that took a bit longer than expected{% endtrans %}"><span class="glyphicon glyphicon-fire"></span> <a href="{{base}}/about#about" class="text">{% trans %}Founder of Lorry{% endtrans %}</a></li>
+						<li class="list-group-item" title="{% trans %}Well that took a bit longer than expected{% endtrans %}"><span class="glyphicon glyphicon-fire"></span> <a href="{{base}}/about#development" class="text">{% trans %}Founder of Lorry{% endtrans %}</a></li>
 						{% elseif flags.alpha %}
 						<li class="list-group-item" title="{% trans %}Registered on the alpha site{% endtrans %}"><span class="glyphicon glyphicon-heart"></span> {% trans %}Took part in Lorry Alpha{% endtrans %}</li>
 						{% elseif flags.beta %}
