--- a/app/templates/addon/game.twig
+++ b/app/templates/addon/game.twig
@@ -3,7 +3,10 @@
 {% block content %}
 	<div class="page-header">
 		<div class="container">
-			<h1>{{title}}</h1>
+			<h1>
+				{{title}}
+				{% if user_login %}<small><a href="{{base}}/developers?create={{short}}"><span class="glyphicon glyphicon-plus"></span></a>{% endif %}
+			</h1>
 		</div>
 	</div>
 	{% if addons %}
