--- a/app/templates/manage/moderator/approve.twig
+++ b/app/templates/manage/moderator/approve.twig
@@ -6,11 +6,7 @@
 	<div class="page-header">
 		<div class="breakout"><a href="{{base}}/moderator"><span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span></a></div>
 		<div class="container">
-			<h1>{{addon}}
-				<small>
-					<span class="glyphicon glyphicon-eye-open"></span>
-				</small>
-			</h1>
+			<h1>{{title}}</h1>
 		</div>
 	</div>
 	{% if comment %}
@@ -40,7 +36,7 @@
 	{% else %}
 		<div class="container">
 			{% set username %}<a href="{{base}}/users/{{user.name}}" class="text">{{user.name}}</a>{% endset %}
-			<p class="lead">{% trans %}<strong>{{username}}</strong> would like to reserve the namespace <strong>{{namespace}}</strong> for this addon.{% endtrans %}</p>
+			<p class="lead">{% trans %}<strong>{{username}}</strong> would like to reserve the namespace <strong>{{namespace}}</strong> for an addon.{% endtrans %}</p>
 			<div class="row">
 				<div class="col-md-8">
 					<form role="form" method="post" action="{{filename}}">
