--- a/app/templates/publish/release.twig
+++ b/app/templates/publish/release.twig
@@ -10,7 +10,7 @@
 				<a href="{{base}}/publish/{{addon.id}}#releases">
 					{{addon.title}}
 				</a>
-				<small><a href="#basic">{% include 'functions/labels/version.twig' with {'version' : version, prefix: 'Release'|trans} %}</a>
+				<small><a href="#basic">{% include 'functions/labels/version.twig' with {'version' : version} %}</a>
 					<a href="#publish">{% if released %}
 						{% if latest %}
 							{% include "functions/labels/latest.twig" %}
@@ -22,7 +22,6 @@
 							{% include "functions/labels/unpublished.twig" %}
 						{% endif %}
 					{% endif %}</a>
-					<span class="glyphicon glyphicon-pencil"></span>
 				</small>
 			</h1>
 		</div>
