--- a/app/templates/publish/release/dependencies.twig
+++ b/app/templates/publish/release/dependencies.twig
@@ -7,12 +7,12 @@
 <div class="row">
 	<div class="col-md-8">
 		<div class="form-group">
-			<label for="add-dependency">{% trans %}Search for an addon{% endtrans %}</label>
+			<label for="add-dependency">{% trans %}Addon{% endtrans %}</label>
 			<div class="input-group">
 				<input type="text" class="form-control" placeholder="Hazard" id="add-dependency">
 				<span class="input-group-btn">
+					<button class="btn btn-primary" id="add-dependency-select" type="button">&#10004;</span></button>
 					<button class="btn btn-default" id="add-dependency-reset" type="button">&times;</button>
-					<button class="btn btn-primary" id="add-dependency-select" type="button"><span class="glyphicon glyphicon-step-forward"></span></button>
 				</span>
 			</div>
 		</div>
@@ -27,5 +27,5 @@
 	</div>
 </div>
 <div class="form-group">
-	<button type="submit" class="btn btn-success inline" name="add-dependency-add" disabled><span class="glyphicon glyphicon-plus"></span> {% trans %}Add dependency{% endtrans %}</button>
+	<button type="submit" class="btn btn-success inline" name="add-dependency-add" disabled>{% trans %}Add dependency{% endtrans %}</button>
 </div>
