update string on release dependencies page

--- a/app/templates/publish/release/dependencies.twig
+++ b/app/templates/publish/release/dependencies.twig
@@ -33,4 +33,4 @@
 <div class="form-group">
 	<button type="submit" class="btn btn-success inline" name="add-dependency-add" disabled>{% trans %}Add dependency{% endtrans %}</button>
 </div>
-<div class="help-block">{% trans %}Users may download your release together with it's dependencies.{% endtrans %}</div>
+<div class="help-block">{% trans %}Users may download the release together with it's dependencies.{% endtrans %}</div>
