--- a/app/templates/email/activate.twig
+++ b/app/templates/email/activate.twig
@@ -2,12 +2,14 @@
 
 {% block subject %}{% trans %}{{brand}}: Confirm your (new) email address{% endtrans %}{% endblock %}
 
-{% set url = '<a href="' ~ url ~ '">' ~ url ~ '</a>' %}
+{% set url %}{{base}}/activate?token={{token}}{% endset %}
+{% set this_link %}<a href="{{url}}">{% trans %}this link{% endtrans %}</a>{% endset %}
 
 {% block body %}
-<p>{% trans %}You set your email address to {{email}}.{% endtrans %}</p>
+	<p>{% trans %}You set your email address to {{email}}.{% endtrans %}</p>
 
-<p>{% trans %}To use all features of {{brand}} you need to activate this new address.{% endtrans %}<br>
-{% trans %}Please open {{url}} to activate your address.{% endtrans %}</p>
+	<p>{% trans %}To use all features of {{brand}} you need to activate this new address.{% endtrans %}<br>
+	{% trans %}Please open {{this_link}} to activate your address or paste the following url into your browser:{% endtrans %}</p>
 
+	<p><strong>{{url}}</strong></p>
 {% endblock %}
