hide various buttons if display is too small

--- a/app/templates/addon/game.twig
+++ b/app/templates/addon/game.twig
@@ -5,7 +5,7 @@
 		<div class="container">
 			<h1>
 				{{title}}
-				{% if user_login %}<small><a href="{{base}}/developers?create={{short}}"><span class="glyphicon glyphicon-plus"></span></a>{% endif %}
+				{% if user_login %}<small class="hidden-xs"><a href="{{base}}/developers?create={{short}}"><span class="glyphicon glyphicon-plus"></span></a></small>{% endif %}
 			</h1>
 		</div>
 	</div>
