--- a/app/templates/root.twig
+++ b/app/templates/root.twig
@@ -7,7 +7,7 @@
 		<link href="{{resources}}/lorry/css/lorry.css?3" rel="stylesheet">
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<link rel="shortcut icon" href="{{resources}}/lorry/img/favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="{{base}}/favicon.ico" type="image/x-icon">
 		<link rel="apple-touch-icon" href="{{resources}}/lorry/img/lorry-128x128-touch.png">
 		{% if fbid %}<meta property="fb:app_id" content="{{fbid}}">{% endif %}
 		<meta property="og:title" content="{{title|default(brand)}}">
