user accounts only have to be activated a single time

--- a/app/templates/account/settings.twig
+++ b/app/templates/account/settings.twig
@@ -58,7 +58,7 @@
 						{% endif %}
 					</div>
 					{% if not activated %}
-						<div class="alert alert-warning">{% trans %}You need to confirm your email address.{% endtrans %}</div>
+						<div class="alert alert-warning">{% trans %}Your account still needs to be activated.{% endtrans %}</div>
 					{% endif %}
 				</form>
 				<h3 id="language">{% trans "Language" %}</h3>
