improve responsive layout around the site

--- a/app/templates/account/login.twig
+++ b/app/templates/account/login.twig
@@ -58,7 +58,7 @@
 				</div>
 			</div>
 			<div class="col-md-8">
-				<hr class="visible-xs">
+				<hr class="visible-sm visible-xs">
 				{% if connect %}
 				{% else %}
 				<h2>{% trans %}Not registered yet?{% endtrans %}</h2>
