--- a/app/templates/account/register.twig
+++ b/app/templates/account/register.twig
@@ -68,7 +68,7 @@
 					</div>
 				</div>
 				<div class="col-md-8">
-					<hr class="visible-xs">
+					<hr class="visible-sm visible-xs">
 					{% if oauth %}
 						<h2>{% trans %}Nearly done&hellip;{% endtrans %}</h2>
 						<p class="lead">{% trans %}You still need to choose your username and enter or verify your email address.{% endtrans %}</p>
