--- a/app/templates/site/contact.twig
+++ b/app/templates/site/contact.twig
@@ -27,6 +27,7 @@
 				</form>
 			</div>
 			<div class="col-md-5">
+				<hr class="visible-xs visible-sm">
 				<h2>{% trans %}Legal{% endtrans %}</h2>
 				{% set legalmail = "<a href=\"mailto:" ~ legal_address ~ "\">" ~ legal_address ~ "</a>" %}
 				<p>{% trans %}If you have any legal issues please do not hesitate to contact us either via our feedback form or via {{legalmail}}. That way we are able to quickly resolve to any problems that might occur or remove any content which infringes your rights.{% endtrans %}</p>
