--- a/app/templates/account/settings.twig
+++ b/app/templates/account/settings.twig
@@ -12,72 +12,85 @@
 		<div class="row">
 			<div class="col-md-4">
 				<h2>{% trans "Profile" %}</h2>
-				<h3 id="appearance">{% trans "Appearance" %}</h3>
-				<div class="form-group">
-					<label for="username">{% trans "Username" %}</label>
-					<input type="text" class="form-control" name="username" id="username" value="{{username}}" {% if not user_admistrator %}title="{% trans %}Contact us to change your username.{% endtrans %}" {%endif %}required disabled>
-				</div>
-				{% if user_administrator %}
-				<div class="form-group">
-					<a href="{{base}}/users/{{user_name}}/edit" class="btn btn-default">{% trans %}Edit own user{% endtrans %}</a>
-				</div>
-				{% endif %}
-				<h3 id="profiles">{% trans "Links" %}</h3>
-				{% include 'functions/alert.twig' with {'selector' : 'profiles'} %}
-				<form role=form" method="post">
-					<input type="hidden" name="profiles-form">
-					<input type="hidden" name="state" value="{{state}}">
-					<div class="form-group">
-						<label for="clonkforge">{% trans "Clonk Forge profile" %}</label>
-						<input type="url" class="form-control" name="clonkforge" id="clonkforge" value="{{clonkforge}}" placeholder="{{clonkforge_placeholder}}">
-					</div>
-					<div class="form-group">
-						<label for="github">{% trans "GitHub name" %}</label>
-						<input type="text" class="form-control" name="github" id="github" value="{{github}}" placeholder="{{github_placeholder}}">
-					</div>
-					<div class="form-group">
-						<button type="submit" class="btn btn-default">{% trans "Change links" %}</button>
-					</div>
-				</form>
-			</div>
-			<div class="col-md-4">
-				<h2 id="account">{% trans "Account" %}</h2>
-				<h3 id="contact">{% trans "Contact details" %}</h3>
-				{% include 'functions/alert.twig' with {'selector' : 'contact'} %}
-				<form role=form" method="post">
-					<input type="hidden" name="contact-form">
-					<input type="hidden" name="state" value="{{state}}">
-					<div class="form-group">
-						<label for="email">{% trans "Email address" %}</label>
-						<input type="email" class="form-control" name="email" id="email" value="{{email}}" required{% if focus_email %} autofocus{% endif %}>
-					</div>
-					<div class="form-group">
-						<button type="submit" class="btn btn-default">{% trans "Change email address" %}</button>
-						{% if not activated %}
-							<button type="submit" class="btn btn-warning" name="resend">{% trans "Resend confirmation" %}</button>
+				<div class="row">
+					<div class="col-md-12 col-sm-6">
+						<h3 id="appearance">{% trans "Appearance" %}</h3>
+						<div class="form-group">
+							<label for="username">{% trans "Username" %}</label>
+							<input type="text" class="form-control" name="username" id="username" value="{{username}}" {% if not user_admistrator %}title="{% trans %}Contact us to change your username.{% endtrans %}" {%endif %}required disabled>
+						</div>
+						{% if user_administrator %}
+							<div class="form-group">
+								<a href="{{base}}/users/{{user_name}}/edit" class="btn btn-default">{% trans %}Edit own user{% endtrans %}</a>
+							</div>
 						{% endif %}
 					</div>
-					{% if not activated %}
-						<div class="alert alert-warning">{% trans %}Your account still needs to be activated.{% endtrans %}</div>
-					{% endif %}
-				</form>
-				<h3 id="language">{% trans "Language" %}</h3>
-				<form role=form" method="post">
-					<input type="hidden" name="language-form">
-					<input type="hidden" name="state" value="{{state}}">
-					<div class="form-group">
-						<label for="language-setting">{% trans "View site in" %}</label>
-						<select name="language" id="language-setting" required>
-							<option value="en-US"{% if language == "en-US" %} selected{% endif %}>{% trans "English" %}</option>
-							<option value="de-DE"{% if language == "de-DE" %} selected{% endif %}>{% trans "German" %}</option>
-						</select>
+					<div class="col-md-12 col-sm-6">
+						<h3 id="profiles">{% trans "Links" %}</h3>
+						{% include 'functions/alert.twig' with {'selector' : 'profiles'} %}
+						<form role=form" method="post">
+							<input type="hidden" name="profiles-form">
+							<input type="hidden" name="state" value="{{state}}">
+							<div class="form-group">
+								<label for="clonkforge">{% trans "Clonk Forge profile" %}</label>
+								<input type="url" class="form-control" name="clonkforge" id="clonkforge" value="{{clonkforge}}" placeholder="{{clonkforge_placeholder}}">
+							</div>
+							<div class="form-group">
+								<label for="github">{% trans "GitHub name" %}</label>
+								<input type="text" class="form-control" name="github" id="github" value="{{github}}" placeholder="{{github_placeholder}}">
+							</div>
+							<div class="form-group">
+								<button type="submit" class="btn btn-default">{% trans "Change links" %}</button>
+							</div>
+						</form>
 					</div>
-					<noscript>
-					<div class="form-group">
-						<button type="submit" class="btn btn-default">{% trans "Change language" %}</button>
+				</div>
+			</div>
+			<div class="col-md-4">
+				<hr class="visible-xs visible-sm">
+				<h2 id="account">{% trans "Account" %}</h2>
+				<div class="row">
+					<div class="col-md-12 col-sm-6">
+						<h3 id="contact">{% trans "Contact details" %}</h3>
+						{% include 'functions/alert.twig' with {'selector' : 'contact'} %}
+						<form role=form" method="post">
+							<input type="hidden" name="contact-form">
+							<input type="hidden" name="state" value="{{state}}">
+							<div class="form-group">
+								<label for="email">{% trans "Email address" %}</label>
+								<input type="email" class="form-control" name="email" id="email" value="{{email}}" required{% if focus_email %} autofocus{% endif %}>
+							</div>
+							<div class="form-group">
+								<button type="submit" class="btn btn-default">{% trans "Change email address" %}</button>
+								{% if not activated %}
+									<button type="submit" class="btn btn-warning" name="resend">{% trans "Resend confirmation" %}</button>
+								{% endif %}
+							</div>
+							{% if not activated %}
+								<div class="alert alert-warning">{% trans %}Your account still needs to be activated.{% endtrans %}</div>
+							{% endif %}
+						</form>
 					</div>
-					</noscript>
-				</form>
+					<div class="col-md-12 col-sm-6">
+						<h3 id="language">{% trans "Language" %}</h3>
+						<form role=form" method="post">
+							<input type="hidden" name="language-form">
+							<input type="hidden" name="state" value="{{state}}">
+							<div class="form-group">
+								<label for="language-setting">{% trans "View site in" %}</label>
+								<select name="language" id="language-setting" required>
+									<option value="en-US"{% if language == "en-US" %} selected{% endif %}>{% trans "English" %}</option>
+									<option value="de-DE"{% if language == "de-DE" %} selected{% endif %}>{% trans "German" %}</option>
+								</select>
+							</div>
+							<noscript>
+							<div class="form-group">
+								<button type="submit" class="btn btn-default">{% trans "Change language" %}</button>
+							</div>
+							</noscript>
+						</form>
+					</div>
+				</div>
 				<h3 id="remove-account">{% trans "Remove account" %}</h3>
 				{% if not show_remove_account %}<p id="remove-confirm-prompt" class="visible-js"><a href="#remove-account" data-toggle="collapse" data-target="#remove-account-confirm">{% trans %}Would you like to remove your account?{% endtrans %}</a></p>{% endif %}
 				<div id="remove-account-confirm" class="collapse in">
@@ -93,10 +106,10 @@
 							</label>
 						</div>
 						{% if password_exists %}
-						<div class="form-group">
-							<label for="password">{% trans "Password" %}</label>
-							<input type="password" class="form-control remove-form-element" name="password" required>
-						</div>
+							<div class="form-group">
+								<label for="password">{% trans "Password" %}</label>
+								<input type="password" class="form-control remove-form-element" name="password" required>
+							</div>
 						{% endif %}
 						<div class="form-group">
 							<button type="submit" class="btn btn-danger remove-form-element">{% trans "Permanently remove account"%}</button>
@@ -106,43 +119,50 @@
 				</div>
 			</div>
 			<div class="col-md-4">
+				<hr class="visible-xs visible-sm">
 				<h2 id="security">{% trans "Security" %}</h2>
-				<h3 id="password">{% trans "Password" %}</h3>
-				{% include 'functions/alert.twig' with {'selector' : 'password'} %}
-				<form role=form" method="post" id="form-password">
-					<input type="hidden" name="password-form">
-					<input type="hidden" name="state" value="{{state}}">
-					{% if password_exists and not can_reset_password %}
-						<div class="form-group">
-							<label for="password-old">{% trans "Old password" %}</label>
-							<input type="password" class="form-control" name="password-old" id="password-old" required{% if focus_password %} autofocus{% endif %}>
+				<div class="row">
+					<div class="col-md-12 col-sm-6">
+						<h3 id="password">{% trans "Password" %}</h3>
+						{% include 'functions/alert.twig' with {'selector' : 'password'} %}
+						<form role=form" method="post" id="form-password">
+							<input type="hidden" name="password-form">
+							<input type="hidden" name="state" value="{{state}}">
+							{% if password_exists and not can_reset_password %}
+								<div class="form-group">
+									<label for="password-old">{% trans "Old password" %}</label>
+									<input type="password" class="form-control" name="password-old" id="password-old" required{% if focus_password %} autofocus{% endif %}>
+								</div>
+							{% endif %}
+							<div class="form-group">
+								<label for="password-new">{% trans "New password" %}</label>
+								<input type="password" class="form-control" name="password-new" id="password-new" required{% if focus_password_new %} autofocus{% endif %}>
+							</div>
+							<div class="form-group">
+								<label for="password-confirm">{% trans "Confirm password" %}</label>
+								<input type="password" class="form-control" name="password-confirm" id="password-confirm" required>
+							</div>
+							<div class="form-group">
+								<button type="submit" class="btn btn-default">{% if password_exists %}{% trans "Change password" %}{% else %}{% trans "Set password" %}{% endif %}</button>
+							</div>
+						</form>
+					</div>
+					<div class="col-md-12 col-sm-6">
+						<h3 id="remote-logout">{% trans "Session" %}</h3>
+						{% include 'functions/alert.twig' with {'selector' : 'remote-logout'} %}
+						<p id="remote-logout-prompt"><a href="#remote-logout" data-toggle="collapse" data-target="#remote-logout-confirm">{% trans %}Would you like to log out of all other devices?{% endtrans %}</a></p>
+						<div class="collapse in" id="remote-logout-confirm">
+							<form method="post" role=form">
+								<input type="hidden" name="remote-logout-form">
+								<input type="hidden" name="state" value="{{state}}">
+								<button type="submit" class="btn btn-warning">{% trans "Log out all other devices" %}</button>
+							</form>
 						</div>
-					{% endif %}
-					<div class="form-group">
-						<label for="password-new">{% trans "New password" %}</label>
-						<input type="password" class="form-control" name="password-new" id="password-new" required{% if focus_password_new %} autofocus{% endif %}>
+						<h4 id="oauth-services">{% trans "Login services" %}</h4>
+						{% include 'functions/alert.twig' with {'selector' : 'oauth'} %}
+						{% include 'functions/oauth.twig' %}
 					</div>
-					<div class="form-group">
-						<label for="password-confirm">{% trans "Confirm password" %}</label>
-						<input type="password" class="form-control" name="password-confirm" id="password-confirm" required>
-					</div>
-					<div class="form-group">
-						<button type="submit" class="btn btn-default">{% if password_exists %}{% trans "Change password" %}{% else %}{% trans "Set password" %}{% endif %}</button>
-					</div>
-				</form>
-				<h3 id="remote-logout">{% trans "Session" %}</h3>
-				{% include 'functions/alert.twig' with {'selector' : 'remote-logout'} %}
-				<p id="remote-logout-prompt"><a href="#remote-logout" data-toggle="collapse" data-target="#remote-logout-confirm">{% trans %}Would you like to log out of all other devices?{% endtrans %}</a></p>
-				<div class="collapse in" id="remote-logout-confirm">
-					<form method="post" role=form">
-						<input type="hidden" name="remote-logout-form">
-						<input type="hidden" name="state" value="{{state}}">
-						<button type="submit" class="btn btn-warning">{% trans "Log out all other devices" %}</button>
-					</form>
 				</div>
-				<h4 id="oauth-services">{% trans "Login services" %}</h4>
-				{% include 'functions/alert.twig' with {'selector' : 'oauth'} %}
-				{% include 'functions/oauth.twig' %}
 			</div>
 		</div>
 	</div>
@@ -150,9 +170,9 @@
 
 {% block javascript %}
 	$('#by-openid').removeClass('in');
-	
+
 	$('#language-setting').change(function() {
-		$(this).closest('form').submit();
+	$(this).closest('form').submit();
 	});
 
 	$('.remove-form-element').attr('disabled', true);
@@ -160,11 +180,11 @@
 
 	$('#remove-confirm').prop('checked', false);
 	$('#remove-confirm').change(function() {
-		if($(this).prop('checked')) {
-			$('.remove-form-element').removeAttr('disabled');
-		} else {
-			$('.remove-form-element').attr('disabled', true);
-		}
+	if($(this).prop('checked')) {
+	$('.remove-form-element').removeAttr('disabled');
+	} else {
+	$('.remove-form-element').attr('disabled', true);
+	}
 	});
 
 	$('#remote-logout-prompt').show();
