--- a/app/templates/site/clonk.twig
+++ b/app/templates/site/clonk.twig
@@ -40,7 +40,7 @@
 		</div>
 		<hr>
 		<div class="row">
-			<div class="col-md-8">
+			<div class="col-md-8 col-sm-7">
 				<h2>{% trans %}Create new content for Clonk{% endtrans %}</h2>
 				<p>{% trans %}The official development of Clonk Rage has halted, therefore the community is creating an open source succesor - OpenClonk.{% endtrans %}</p>
 				<p>{% trans %}Both games are different and alike, but the majority of all addons have been created for Clonk Rage. Once you've created something awesome you can distribute it via Lorry, making it instantly available for any interested player.{% endtrans %}</p>
@@ -48,7 +48,7 @@
 					<a href="{{base}}/developers" class="btn btn-info">{% trans %}Developer portal{% endtrans %}</a>
 				</p>
 			</div>
-			<div class="col-md-4">
+			<div class="col-md-4 col-sm-5">
 				<h2>{% trans %}Build the next Clonk{% endtrans %}</h2>
 				<p>{% trans %}The OpenClonk project is constantly looking for developers to help out with the next iteration of Clonk. If you have moderate or even advanced C++-skills you should definitively be welcome in the team.{% endtrans %}</p>
 				<p>
