--- a/app/templates/site/about.twig
+++ b/app/templates/site/about.twig
@@ -42,18 +42,20 @@
 			<div class="col-md-4">
 				<h3 id="technologies">{% trans "Technologies" %}</h3>
 				<dl>
-					<dt><a href="http://php.net">PHP</a></dt>
+					<dt><a href="http://php.net/">PHP</a></dt>
 					<dd>by the <a href="http://php.net/credits.php">PHP Group</a>,</dd>
 					<dt><a href="http://twig.sensiolabs.org">Twig</a> / <a href="http://swiftmailer.org/">Swift Mailer</a></dt>
-					<dd>by <a href="http://fabien.potencier.org">Fabien Potencier</a> and <a href="http://sensiolabs.com/">SensioLabs</a>,</dd>
+					<dd>by <a href="http://fabien.potencier.org/">Fabien Potencier</a> and <a href="http://sensiolabs.com/">SensioLabs</a>,</dd>
 					<dt><a href="http://redis.io/">Redis</a></dt>
-					<dd>by <a href="http://invece.org/">Salvatore Sanfilippo</a> and <a href="http://redis.io/topics/sponsors">sponsors</a>,</dd>
+					<dd>by <a href="http://invece.org/">Salvatore Sanfilippo</a>,</dd>
 					<dt><a href="https://github.com/resque/resque">Resque</a> via <a href="https://github.com/chrisboulton/php-resque">resque-php</a></dt>
 					<dd>by <a href="https://github.com/resque/resque/graphs/contributors">Team Resque</a> / <a href="http://chrisboulton.com/">Chris Boulton</a>,</dd>					
 					<dt><a href="http://lesscss.org/">Less</a></dt>
 					<dd>by <a href="https://github.com/cloudhead">Alexis Sellier</a> and <a href="http://lesscss.org/about/#team">contributors</a>,</dd>
-					<dt><a href="https://code.google.com/p/lightopenid/">LightOpenID</a> / <a href="https://github.com/thephpleague/oauth2-client">OAuth 2.0 Client</a></dt>
-					<dd>by <a href="https://code.google.com/u/103055401176250561450/">lightopenid author</a> / <a href="http://thephpleague.com/">the PHP League</a>,</dd>
+					<dt><a href="https://github.com/thephpleague/flysystem">Flysystem</a> / <a href="https://github.com/thephpleague/oauth2-client">OAuth 2.0 Client</a></dt>
+					<dd>by <a href="http://thephpleague.com/">the PHP League</a>,</dd>
+					<dt><a href="https://code.google.com/p/lightopenid/">LightOpenID</a></dt>
+					<dd>by <a href="https://code.google.com/u/103055401176250561450/">the anonymous author</a>,</dd>
 					<dt><a href="https://github.com/jbroadway/analog/">Analog</a></dt>
 					<dd>by <a href="https://github.com/jbroadway">Johnny Broadway</a>.</dd>
 				</dl>
@@ -61,10 +63,12 @@
 			<div class="col-md-4">
 				<h3 id="resources">{% trans "Resources" %}</h3>
 				<dl>
-					<dt><a href="http://getbootstrap.com">Bootstrap</a></dt>
+					<dt><a href="http://getbootstrap.com/">Bootstrap</a></dt>
 					<dd>by <a href="http://twitter.com/mda">@mda</a>, <a href="http://twitter.com/fat">@fat</a> and <a href="https://github.com/twbs/bootstrap/graphs/contributors">contributors</a>,</dd>
+					<dt><a href="http://glyphicons.com/">Glyphicons</a></dt>
+					<dd>by Jan Kovařík,</dd>
 					<dt><a href="http://resumablejs.com/">Resumable.js</a></dt>
-					<dd>by <a href="http://www.23company.com/">23</a> (company),</dd>
+					<dd>by <a href="http://www.23company.com/">23</a>,</dd>
 					<dt><a href="https://twitter.github.io/typeahead.js/">Typeahead.js</a></dt>
 					<dd>by <a href="https://twitter.com/">Twitter</a>,</dd>
 					<dt><a href="http://www.clonk.de/cr.php?lng={% trans "en" %}">Clonk Rage logo</a></dt>
@@ -79,7 +83,7 @@
 				<h3 id="development">{% trans "Development" %}</h3>
 				<div class="head">
 					<dt><img src="{{resources}}/lorry/img/benedict.png" class="img-circle">
-					<a href="https://beheh.de">Benedict Etzel</a> <span class="text-muted">/ <a href="{{base}}/users/B_E" class="text-muted">B_E</a></span></dt>
+					<a href="https://beheh.de/">Benedict Etzel</a> <span class="text-muted">/ <a href="{{base}}/users/B_E" class="text-muted">B_E</a></span></dt>
 					<dd>founder & developer.</dd>
 				</div>
 				<hr>
