--- a/app/templates/site/api.twig
+++ b/app/templates/site/api.twig
@@ -15,9 +15,9 @@
 		<h2>{% trans %}Endpoints{% endtrans %}</h2>
 		<table class="table">
 			<tr><th>{% trans %}Url{% endtrans %}</th><th>{% trans %}Description{% endtrans %}</th><th>{% trans %}Typical result{% endtrans %}</th></tr>
-			<tr><td><pre>/api/games.json</pre></td><td>{% trans %}Returns a list of games.{% endtrans %}</td><td><pre>{"games":[{"id":"rage", ...}, ...]}</pre></td></tr>
-			<tr><td><pre>/api/addons/&lt;game&gt;.json</pre></td><td>{% trans %}Returns a list of addons for the queried game.{% endtrans %}</td><td><pre>{"addons":[{"id":"knights", ...}, ...]}</pre></td></tr>
-			<tr><td><pre>/api/addons/&lt;game&gt/&lt;addon&gt.json</pre></td><td>{% trans %}Returns details about the queried addon.{% endtrans %}</td><td><pre>{"addon":{"id":"knights", ...}}</pre></td></tr>
+			<tr><td><pre>/api/v0/games.json</pre></td><td>{% trans %}Returns a list of games.{% endtrans %}</td><td><pre>{"games":[{"id":"rage", ...}, ...]}</pre></td></tr>
+			<tr><td><pre>/api/v0/addons/&lt;game&gt;.json</pre></td><td>{% trans %}Returns a list of addons for the queried game.{% endtrans %}</td><td><pre>{"addons":[{"id":"knights", ...}, ...]}</pre></td></tr>
+			<tr><td><pre>/api/v0/addons/&lt;game&gt/&lt;addon&gt.json</pre></td><td>{% trans %}Returns details about the queried addon.{% endtrans %}</td><td><pre>{"addon":{"id":"knights", ...}}</pre></td></tr>
 		</table>
 		<h2>{% trans %}Objects{% endtrans %}</h2>
 		<table class="table">
@@ -28,7 +28,7 @@
 		<h2>{% trans %}Error handling{% endtrans %}</h2>
 		<p>{% trans %}You can handle errors by checking for the <code>error</code> field in the response.{% endtrans %} {% trans %}Additionally, a human-readable message may be given in a <code>message</code> field.{% endtrans %}</p>
 		<h3>{% trans %}Examples{% endtrans %}</h3>
-		<pre>{"error":"forbidden","message":"You are not allowed to access this addon."}</pre>
-		<pre>{"error":"filenotfound","message":"The queried game does not exist."}</pre>
+		<pre>{"error":"forbidden", "message":"you are not allowed to access this endpoint"}</pre>
+		<pre>{"error":"filenotfound", "message":"the queried game does not exist"}</pre>
 	</div>
 {% endblock %}
