update clonk introduction header bar string

--- a/app/templates/root.twig
+++ b/app/templates/root.twig
@@ -35,7 +35,7 @@
 				<div class="jumbotron site-notice" id="greeter">
 					<div class="container">
 						<p>
-							{% trans %}Lorry is a fan site for Clonk.{% endtrans %} {% trans %}Clonk is a unique game series with thousands of player-created worlds.{% endtrans %}
+							{% trans %}Lorry is a fan site for Clonk, a unique game series with hundreds of worlds created by other players.{% endtrans %}
 							<a href="{{base}}/about/clonk" class="btn btn-success btn">{% trans %}Learn more{% endtrans %}</a>
 							<a href="{{base}}/about/clonk?returnto={{origpath}}" rel="nofollow" class="btn btn-default btn" id="greeter-hide">{% trans %}Hide{% endtrans %}</a>
 						</p>
